--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
     <svg viewBox="0 0 600 300">
         <!-- Symbol-->
-        <symbol id="s-text"><text text-anchor="middle" x="50%" y="50%" dy=".35em">Leak Labratory</text></symbol><!-- Duplicate symbols-->
+        <symbol id="s-text"><text text-anchor="middle" x="50%" y="50%" dy=".35em">Leak Lab</text></symbol><!-- Duplicate symbols-->
         <use class="text" xlink:href="#s-text"></use>
         <use class="text" xlink:href="#s-text"></use>
         <use class="text" xlink:href="#s-text"></use>
@@ -174,8 +174,8 @@
     </svg>
 
     <div class="buttons">
-       <a href="/pop.html"><button class="btn-hover color-1">Popular</button></a>
-        <a href="/all.html"><button class="btn-hover color-2">All</button></a>
+       <a href="/leaklab/pop.html"><button class="btn-hover color-1">Popular</button></a>
+        <a href="/leaklab/all.html"><button class="btn-hover color-2">All</button></a>
     </div>
     
 </body>
