--- a/index.html
+++ b/index.html
@@ -160,6 +160,21 @@
 	 height: 100%;
 }
 </style>
+<style>
+#buttons{
+    height: 300px;
+    overflow: scroll;
+}
+
+#t {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    width: 100%;
+    height: 23px;
+}
+</style>
 </head>
 <body>
     <div class="buttons">
